--- a/citas/src/index.css
+++ b/citas/src/index.css
@@ -41,13 +41,16 @@ label {
   color: white;
 }
 
+
+
 input[type="date"],
+input[type="text"],
 input[type="time"] {
   height: 38px;
     padding: 6px 10px;
     background-color: #fff;
     border: 1px solid #D1D1D1;
-    border-radius: 4px;
+    border-radius: 50px;
     box-shadow: none;
     box-sizing: border-box;
 }
@@ -105,4 +108,9 @@ input[type="time"] {
   overflow-y: auto;
   border-radius: 50px;
 }
+select{
+  border-radius: 50px;
+  
+}
+
 
